# artificial_intelligence

./: .gitignore  01.pro  CMakeLists.txt  README.md  travis.yml.txt
.github/workflows/: semgrep.yml
include/: bullet.h  collising.h  mainwindow.h  man.h  mousecontrol.h  npc.h  player.h  target.h  test_class.h  wall.h  way.h  widget.h
include/html/: annotated.html  bullet_8h_source.html  class_bullet-members.html  class_bullet.html  class_main_window-members.html  class_main_window.html  class_man-members.html  class_man.html  class_mouse_control-members.html  class_mouse_control.html  class_npc-members.html  class_npc.html  class_player-members.html  class_player.html  class_widget-members.html  class_widget.html  classes.html  collising_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  mainwindow_8h_source.html  man_8h_source.html  menudata.js  mousecontrol_8h_source.html  npc_8h_source.html  npc__way_8h_source.html  player_8h_source.html  struct_target-members.html  struct_target.html  struct_wall-members.html  struct_wall.html  struct_way-members.html  struct_way.html  target_8h_source.html  wall_8h_source.html  way_8h_source.html  widget_8h_source.html
include/latex/: annotated.tex  class_bullet.eps  class_bullet.tex  class_main_window.tex  class_man.eps  class_man.tex  class_mouse_control.eps  class_mouse_control.tex  class_npc.eps  class_npc.tex  class_player.eps  class_player.tex  hierarchy.tex  (+6 more)
sources/: bullet.cpp  gun.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  man.cpp  mousecontrol.cpp  npc.cpp  player.cpp  test_class.cpp  widget.cpp  widget.ui
(+36 files in other folders)
